Changing UI menu corrupts NLA animated value #54065

Closed
opened 2018-02-13 08:59:25 +01:00 by Serge Lyatin · 5 comments

System Information
Win 10 64bit

Blender Version
Broken: 2.79

Short description of error
NLA strip time is keyframed and produce error when switching screens from NLA to Graph editor.

Exact steps for others to reproduce the error
Open File, play animation -> everything is fine
Switch screen with NLA editor to Graph editor -> Animation is corrupted (red underline). Switching other screens doesn't behave like this.
NLA_test.blend

**System Information** Win 10 64bit **Blender Version** Broken: 2.79 **Short description of error** NLA strip time is keyframed and produce error when switching screens from NLA to Graph editor. **Exact steps for others to reproduce the error** Open File, play animation -> everything is fine Switch screen with NLA editor to Graph editor -> **Animation is corrupted** (red underline). Switching other screens doesn't behave like this. [NLA_test.blend](https://archive.blender.org/developer/F2251847/NLA_test.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Joshua Leung self-assigned this 2018-02-13 11:36:08 +01:00
Member

Hmm.. that sound strange. Assigning to self to investigate

Hmm.. that sound strange. Assigning to self to investigate

This issue was referenced by 4d966aa19c

This issue was referenced by 4d966aa19c36d86a407f419f88dc713f454e74a0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54065
No description provided.